# Nscript-test

./: .gitignore  Cargo.toml  LICENSE  server.nc
Examples_nscript/: coroutines.nc
failedlib/nscriptlib/includes/: nscript_interpreter.rs
src/: lib.rs  main.rs
src/includes/: nscript_arrays.rs  nscript_encryption.rs  nscript_file_and_system.rs  nscript_functions.rs  nscript_http_html.rs  nscript_interpreter.rs  nscript_rust_fn_bindings.rs
system/: init.nc
system/modules/html/: init.nc
system/modules/html/raw/: createuserform.html  login.html
system/modules/scripteditor/: init.nc
system/modules/userdb/: init.nc
